--- a/scss/devices/_mobile.scss
+++ b/scss/devices/_mobile.scss
@@ -1,5 +1,158 @@
 @media (min-width:200px){
+    nav{
+        display: flex;
+        justify-content: space-between;
+        >ul{
+            display: none;
+        }
+    }
 
+    header{
+        >section{
+            background-image: url(/img/pic-01.jpg);
+            background-repeat: no-repeat;
+            background-size: cover;
+            background-position: center;
+            height: 50vh;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            row-gap: 2vh;
+            color: white;
 
+            h2{
+                font-size: 40px;
+                text-align: center;
+            }
+
+            >p{
+                width: 80%;
+                text-align: center;
+            }
+
+            a{
+                text-decoration: none;
+                color: white;
+                background-color: aquamarine;
+                padding: 5%;
+                border-radius: 5%;
+            }
+        }
+    }
+
+    .services{
+        display: flex;
+        flex-direction: column;
+        row-gap: 5vh;
+        align-items: center;
+        padding-top: 15%;
+        padding-bottom: 15%;
+
+        >article{
+            display: flex;
+            flex-direction: column;
+            row-gap: 2vh;
+            align-items: center;
+            >aside{
+                display: flex;
+                column-gap: 1vh;
+            }
+        }
+
+        h6{
+            background-color: gray;
+            width: 5vh;
+            height: 3px;
+            color: black;
+        }
+
+        h6:nth-child(2){
+            background-color: green;
+        }
+
+        >section{
+            display: flex;
+            flex-direction: column;
+            row-gap: 7vh;
+
+            >aside{
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                text-align: center;
+                row-gap: 2vh;
+            }
+
+            i{
+                font-size: 40px;
+            }
+
+            h3{
+                font-size: 25px;
+            }
+        }
+    }
+
+    .testimonials{
+        background-image: url(/img/pic-02.jpg);
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: cover;
+        height: 30vh;
+
+        >article{
+            background-color: rgba(45, 43, 43,0.5);
+            height: 30vh;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            row-gap: 1vh;
+
+            i{
+                color: aqua;
+                font-size: 30px;
+            }
+
+            p{
+                width: 95%;
+                text-align: center;
+                color: white;
+            }
+
+            h4{
+                color: aqua;
+            }
+        }
+    }
+
+    .contact{
+        padding-top: 15%;
+        display: flex;
+        flex-direction: column;
+        row-gap: 8vh;
+        >article{
+            display: flex;
+            flex-direction: column;
+            row-gap: 2vh;
+            align-items: center;
+            >aside{
+                display: flex;
+                column-gap: 1vh;
+            }
+        }
+
+        h6{
+            background-color: gray;
+            width: 5vh;
+            height: 3px;
+            color: black;
+        }
+
+        h6:nth-child(2){
+            background-color: green;
+        }
+    }
     
 }
